--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -1,14 +1,13 @@
 ---
+// FormattedDate.astro
 interface Props {
 	date: Date;
 }
-
 const { date } = Astro.props;
 ---
-
 <time datetime={date.toISOString()}>
 	{
-		date.toLocaleDateString('en-us', {
+		date.toLocaleDateString('it-it', { // Cambiato in it-it
 			year: 'numeric',
 			month: 'short',
 			day: 'numeric',
