Nuovo Design SVC 2026

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ import Layout from '../layouts/BlogPost.astro';
 	title="Chi Siamo"
 	description="La storia di GiftyPaper e la nostra passione per i regali."
 	pubDate={new Date('January 16 2026')}
-	heroImage="/blog-placeholder-about.jpg"
+	heroImage="/logo.jpeg"
 >
 	<p>
 		GiftyPaper nasce da un'idea semplice: il regalo inizia nel momento in cui lo porgi, 
